--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "19.1.0",
     "react-draggable": "^4.5.0",
     "roughjs": "^4.6.6",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tldraw": "^3.15.1",
     "zustand": "^5.0.7"
   },
