feat: vision-first tutor; fraction-focused persona; server-enforced model; plain-text outputs
- Remove local shape suggestions and UI; rely on Gemini vision snapshots\n- Add prompt builder (Socratic, one-sentence, fractions-first); integrate in AmbientAgent\n- Pre-throttle tutor calls to reduce chatter; tie thought bubble to responses\n- Normalize /api/pi/canvas to always return plain text + analysis JSON (student sees text only)\n- Default to gemini-2.5-flash with server control; client no longer overrides model\n- Keep model changes explicit going forward

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "relay": "node scripts/live-relay-server.mjs",
+    "diagnose": "node scripts/live-diagnose.mjs"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -19,6 +21,9 @@
     "roughjs": "^4.6.6",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "@daily-co/daily-js": "^0.57.0",
+    "dotenv": "^16.4.5",
+    "ws": "^8.17.1",
     "tldraw": "^3.15.1",
     "zustand": "^5.0.7"
   },
