--- a/env.example
+++ b/env.example
@@ -10,11 +10,26 @@ GEMINI_LIVE_PROJECT_ID=your_project_id_here
 WS_MAX_RETRIES=5
 WS_RETRY_DELAY=2000
 WS_HEARTBEAT_INTERVAL=30000
+NEXT_PUBLIC_LIVE_RELAY_PORT=8787
+
+# Daily (for voice via Pipecat)
+DAILY_API_KEY=
+DAILY_DOMAIN=your-team.daily.co
+NEXT_PUBLIC_DAILY_DOMAIN=your-team.daily.co
+NEXT_PUBLIC_DISABLE_LIVE_WS=true
+NEXT_PUBLIC_ENABLE_TTS=false
+NEXT_PUBLIC_TUTOR_MIN_GAP_MS=15000
+NEXT_PUBLIC_TUTOR_MAX_MSGS_PER_MIN=4
+NEXT_PUBLIC_TUTOR_SUPPRESS_WHEN_BUBBLE=true
 
 # Model Configuration
-GEMINI_MODEL_NAME=gemini-2.0-flash-exp
+GEMINI_MODEL_NAME=gemini-2.5-flash
 GEMINI_TEMPERATURE=0.7
-GEMINI_MAX_TOKENS=200
+GEMINI_MAX_TOKENS=96
+
+# Public client-side overrides (optional)
+NEXT_PUBLIC_GEMINI_TEMPERATURE=0.7
+NEXT_PUBLIC_GEMINI_MAX_TOKENS=96
 
 # Optional: WebRTC/TURN Server Configuration (for production)
 # NEXT_PUBLIC_TURN_SERVER_URL=turn:your-turn-server.com:3478
