chore: remove annotation feature for now; keep vision-first text + analysis only

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Simili Environment Variables
 
 # Google Gemini API Configuration (SECURE - Server-side only)
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyBcMXq7zw9azeIYpEt2EhhUVV5MSb3A9m0
 
 # Gemini Live Configuration
 GEMINI_LIVE_PROJECT_ID=your_project_id_here
